--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [version]
 target = 0.3
-release =
+release = 
 
 [testing]
 coverage_required = 0.0
 
 [metadata]
-name = occlib
+name = vtc
 description = a python template for the Open Cinema Collective
 author = Billy Peake
 
@@ -33,9 +33,9 @@ doc =
 build = 
 	twine
 	wheel
-test = 
+test =
+	coverage
 	pytest-sugar
-	pytest-cov
 	pytest-html
 
 [flake8]
@@ -84,14 +84,14 @@ addopts =
 	--self-contained-html
 
 [coverage:run]
-source = occlib
+source = vtc
 
 [coverage:html]
 directory = zdevelop/tests/_reports/coverage
-title = coverage report for occlib
+title = coverage report for vtc
 
 [build_sphinx]
-project = occlib
+project = vtc
 copyright = '2021, Open Cinema Collective'
 source-dir = ./zdocs/source
 build-dir = ./zdocs/build
