added automatic doc testing to tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -76,13 +76,19 @@ ignore_missing_imports = True
 ignore_errors = True
 
 [tool:pytest]
-testpaths = zdevelop/tests
+testpaths =
+	zdevelop/tests
+	zdocs/source
+	README.MD
 addopts = 
 	--cov
 	--cov-report=html
 	--cov-report=xml:zdevelop/tests/_reports/coverage.xml
 	--html=zdevelop/tests/_reports/test_results.html
 	--self-contained-html
+	--doctest-modules
+	--doctest-glob="*.rst"
+	--doctest-glob="*.MD"
 
 [coverage:run]
 source = vtc
