--- a/setup.cfg
+++ b/setup.cfg
@@ -88,7 +88,7 @@ addopts =
 	--self-contained-html
 	--doctest-modules
 	--doctest-glob="*.rst"
-	--doctest-glob="*.MD"
+	--doctest-glob="*.md"
 
 [coverage:run]
 source = vtc
