--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [version]
-target = 0.3
+target = 0.0
 release = 
 
 [testing]
-coverage_required = 0.0
+coverage_required = 100
 
 [metadata]
 name = vtc
-description = a python template for the Open Cinema Collective
+description = A SMTPE video timecode library for Python
 author = Billy Peake
 
 [options]
