updated badges and logo

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,34 @@ coverage_required = 1.0
 name = vtc
 description = A SMTPE video timecode library for Python
 author = Billy Peake
+url = https://github.com/opencinemac/vtc-py
+classifiers =
+	# Classifiers help users find your project by categorizing it.
+	#
+	# For a list of valid classifiers, see https://pypi.org/classifiers/
+	# Optional
+	# How mature is this project? Common values are
+	#   3 - Alpha
+	#   4 - Beta
+	#   5 - Production/Stable
+	Development Status :: 4 - Beta
+
+	# Indicate who your project is intended for
+	Intended Audience :: Developers
+	Topic :: Multimedia
+	Topic :: Multimedia :: Video
+	Topic :: Multimedia :: Video :: Non-Linear Editor
+
+	# Pick your license as you wish
+	License :: OSI Approved :: MIT License
+
+	# Specify the Python versions you support here. In particular, ensure
+	# that you indicate you support Python 3. These classifiers are *not*
+	# checked by 'pip install'. See instead 'python_requires' below.
+	Programming Language :: Python :: 3.7
+	Programming Language :: Python :: 3.8
+	Programming Language :: Python :: 3.9
+	Programming Language :: Python :: 3 :: Only
 
 [options]
 setup_requires = 
@@ -101,4 +129,3 @@ project = vtc
 copyright = '2021, Open Cinema Collective'
 source-dir = ./zdocs/source
 build-dir = ./zdocs/build
-
